--- a/LogStash configuration File/logstash.conf
+++ b/LogStash configuration File/logstash.conf
@@ -1,35 +1,26 @@
 input {
-        stdin{}
+  kafka {
+    zk_connect => "localhost:2181"
+    topic_id => "pankaj_cmpe296A"
+    codec => "json"
+  }
 }
 
 filter{
-        #json{
-        #       source => "message"
-        #       target => "test"
-        #}
-        #grok{
-        #        match => {"test" => "\"Light\":%{NUMBER:light:int}" }
-        #}
-        mutate{
-                split => ["message",","]
-                add_field => ["light","%{[message][1]}"]
-                #add_field => ["temp","%{light:int}"]
-                split => ["light",":"]
-                add_field => ["ll","%{[light][1]}"]
-                split => ["ll","}"]
-                add_field => ["l","%{[ll][0]}"]
-                #add_field => ["temp","%{l:int}"]
-                #convert => { "l" => "integer" }
-
+        json{
+                source => "message"
+                target => "temp"
         }
-         if [l]=="11"{
-                        drop{}
-         }
-}               
-
+        if [Light] >= 60{
+            drop { }
+        }       
 }
-output{
-#       if [l]=="11"{
-        stdout{}
-#}      
+
+
+output {
+       elasticsearch{
+       hosts => ["localhost:9200"]
+       }
+        stdout { codec => json }
+
 }
